# gis-presentation

./: .gitignore  pyproject.toml  slides.py
